# pubmedparser

./: .gitignore  .gitlab-ci.yml  API_grabber.py  CHANGELOG.md  Makefile  README.html  README.md  README.org  build.py  build_script.py  cat_results.sh  default.nix  flake.nix  makefile  pubmedparser.nix  pyproject.toml  read_xml.nix  setup.py
.github/workflows/: build.yaml  release.yaml
data/: pubmed21n0001.xml  pubmed21n1000.xml  pubmed21n1001.xml  pubmed21n1002.xml  pubmed21n1003.xml  pubmed21n1004.xml  pubmed21n1005.xml
example/: calculate_overlap.sh  convert_for_neo4j.sh  creating_graphs.py  creating_graphs.sh  download_pubmed_data.sh  env.sh  generate_importer.sh  importpubmed.sh  process.sh  read_xml_files.sh  structure.yml
helpers/: convert2graph.sh  download_pubmed_data.sh  generate_importer.sh
include/: read_xml.h
pubmedparser/: __init__.py  _readxml.c  _readxml.pyi  ftp.py  pubmed.py  storage.py
src/: Makefile  error.c  error.h  makefile  nodes.c  nodes.h  overlap.c  paths.c  paths.h  query.c  query.h  read_structure_file.c  read_xml.c  read_xml.h  read_xml_core.c  structure.h  yaml_get_key_component.c  yaml_reader.c  yaml_reader.h
tests/: Makefile  bats_helpers.bash  test_overlap_calculator.bats  test_overlap_performance.bats  test_sort_performance.bats  test_xml_reader_argument_parsing.bats  test_xml_reader_output.bats  test_yaml_reader  test_yaml_reader.c
tests/data/: test_minimal_structure.yml  test_xml_reader_structure.yml  test_yaml_reader_structure.yml
