[tool.black]
line-length = 79
preview = true

[tool.mypy]
ignore_missing_imports = true

[tool.poetry]
name = "pubmedparser"
version = "0.1.0"
description = "Download and parse pubmed publication data"
license = "MIT"
keywords = ["publication", "network"]
repository = "https://gitlab.com/net-synergy/pubmedparser"
readme = "README.org"
authors = ["David Connell <davidconnell12@gmail.com>"]
maintainers = ["David Connell <davidconnell12@gmail.com>"]
packages = [{ include = "pubmedparser" }]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
mypy = "^1.1.1"

[tool.poetry.build]
script = "build.py"
generate-setup-file = true

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools"]
build-backend = "poetry.core.masonry.api"